# bible-accuracy-benchmark

./: .dockerignore  .env.example  .gitignore  .gitmodules  Dockerfile  README.md  cloudbuild.yaml  pyproject.toml  run_local.sh
.claude/: launch.json
.github/workflows/: ci.yml  deploy.yml
baseline/: .env.example  .gitignore  README.md  pyproject.toml
baseline/scripts/: build_data.sh  run.sh
baseline/src/bible_baseline/: __init__.py  adapter.py  llm_client.py  openai_app.py  routes.py
baseline/tests/: test_adapter.py  test_isolation.py  test_openai_endpoint.py
config/: base.toml  beta.toml  release.toml
dataset/: adversarial-goals-v1.json  famous-v1.jsonl  phantom-v1.json  spec-v1.json  topics-v1.json  versions.json
dataset/templates/: simple.json
docs/: ARCHITECTURE.md  GITHUB_CICD.md  METHODOLOGY.md  RUNBOOK.md  TODO_BEFORE_RELEASE.md
docs/versions/: v0.1.md  v0.2.md
scripts/: gcp-setup.sh  generate_canaries.py  run-lineup.sh  smoke_test.py
scripts/ci/: gh-deploy.sh
src/bible_bench/: __init__.py  auditor.py  cli.py  config.py  dataset.py  llm.py  normalize.py  phantom.py  prompts.py  report.py  results_store.py  runner.py  scoring.py  topical.py  usfm.py  version.py  yv_client.py
src/bible_bench/adversarial/: __init__.py  encounter.py  goals.py  judge.py
src/bible_bench/api/: __init__.py  app.py  store_cache.py
tests/: canaries.json  fake_bible.py  fake_provider.py  test_adversarial.py  test_api.py  test_auditor.py  test_disk_cache.py  test_live_canaries.py  test_llm_seed.py  test_normalize.py  test_package.py  test_parse_spans.py  test_phantom.py  test_report.py  test_scoring.py  test_topical.py  test_usfm.py
web/: index.html  package-lock.json  package.json  vite.config.ts
web/src/: FilterBar.tsx  Layout.tsx  api.ts  components.tsx  constants.ts  diff.ts  filterContext.tsx  hooks.ts  index.css  main.tsx
web/src/pages/: Evaluations.tsx  Failures.tsx  Leaderboard.tsx  Methodology.tsx  ModelDetail.tsx
